# COMP4060-Compiler

./: .gitignore  Cargo.toml  Readme.md  todo.txt
src/: lib.rs  main.rs
src/clang/: cprog.rs  mod.rs  select_instructions.rs  uncover_locals.rs
src/common/: graph.rs  macros.rs  mod.rs  traits.rs  types.rs  utils.rs
src/common/macros/: cmacros.rs  common_macros.rs  mod.rs  rmacros.rs  xmacros.rs
src/rlang/: explicate_control.rs  mod.rs  resolve_complex.rs  rmacros.rs  ropt.rs  rprog.rs  rrandp.rs  type_check.rs  uniquify.rs
src/xlang/: allocation.rs  assign_homes.rs  assign_registers.rs  mod.rs  patch_instructions.rs  runtime.c  sys_asm.rs  uncover_live.rs  xprog.rs
