[package]
name = "compiler"
version = "0.1.0"
authors = ["Carlton Perkins <carltonrp52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
strum = "0.24.0"
strum_macros = "0.20.1"
tempfile = "3.2.0"
itertools = "0.10.0"
rayon = "1.5.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
